# tokenlens

./: ARCHITECTURE.md  BLOG_DRAFT.md  README.md  pyproject.toml
examples/: anthropic_example.py  demo_bad.py  demo_good.py
token_lens/: __init__.py  analyzer.py  cli.py  core.py  dashboard.py  models.py  patch.py  patterns.py  reporter.py  store.py  tokenizer.py  wrapper.py
